--- a/index.html
+++ b/index.html
@@ -43,7 +43,8 @@
 <body>
     <div class="container">
         <h1>Simu Radu Stefan</h1>
-        <p>A passionate software developer with a strong foundation in programming and a commitment to continuous learning.</p>
+	<img src="poza.png" width=200 height=300>
+        <p>An aspiring software developer with a strong foundation in programming and a commitment to continuous learning.</p>
 
         <div class="section">
             <h2>Education</h2>
